# s2flow

./: .gitignore  LICENSE  pyproject.toml
configs/: s2flow-lc_model_sweep.yaml  s2flow-lc_model_sweep_sampling_steps.yaml  s2flow-lc_sliding_window.yaml  s2flow-lceval.yaml  s2flow-lctrain.yaml  s2flow-lctrain_class_determination.yaml  s2flow-sampling_sweep.yaml  s2flow-simple_lc_inf.yaml  s2flow-sreval.yaml  s2flow-srinf.yaml  s2flow-srinf_10.yaml  s2flow-srinf_20.yaml  s2flow-srinf_30.yaml  s2flow-srinf_40.yaml  s2flow-srinf_50.yaml  s2flow-srtrain.yaml  sr_train.yaml
notebooks/: flow_matching_ex.ipynb  h3_gen.ipynb  lc_plots.ipynb  playground.ipynb  plot_sampling.ipynb  s2_raster_mosaic.ipynb  test.ipynb
slurm/: inference_sweep.py  lc_model_sweep.py  lc_steps_sweep.py  sampling_sweep.py
src/s2flow/: cli.py  loss.py  metrics.py  models.py  modules.py  slurm.py  utils.py
src/s2flow/assets/: pca.joblib
src/s2flow/data/: datasets.py  pca.py  transforms.py  utils.py
src/s2flow/engine/: eval.py  inference.py  sampling.py  sliding_window.py  training.py
